<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AbouUsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/about_title"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_36"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_des_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/main_color"
            android:gravity="start"
            android:onClick="HomeIntent"
            app:srcCompat="@drawable/back" />
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="170dp"
        android:layout_height="110dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:background="@color/main_color"
        app:layout_constraintBottom_toTopOf="@+id/view56"
        app:layout_constraintEnd_toStartOf="@+id/view55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_toolbar"
        app:srcCompat="@drawable/logo_sidebar" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="170dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/view56"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view55"
        app:layout_constraintTop_toBottomOf="@+id/about_toolbar"
        app:srcCompat="@drawable/logo_fpt" />

    <View
        android:id="@+id/view55"
        android:layout_width="5dp"
        android:layout_height="110dp"
        android:layout_marginTop="40dp"
        android:background="@color/main_color"
        app:layout_constraintBottom_toTopOf="@+id/view56"
        app:layout_constraintEnd_toStartOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/about_toolbar" />

    <View
        android:id="@+id/view56"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view55" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="clip_vertical"
        android:justificationMode="inter_word"
        android:text="@string/about_content_1"
        android:textColor="@color/main_color"
        android:textSize="@dimen/textsize_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view57"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view56" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:justificationMode="inter_word"
        android:text="@string/lecturer"
        android:textColor="@color/main_color"
        android:textSize="@dimen/textsize_20"
        android:textStyle="bold"
        android:paddingLeft="25dp"
        app:layout_constraintBottom_toTopOf="@+id/view58"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view57" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:justificationMode="inter_word"
        android:text="@string/memebers"
        android:textColor="@color/main_color"
        android:textSize="@dimen/textsize_20"
        android:textStyle="bold"
        android:paddingLeft="25dp"
        app:layout_constraintBottom_toTopOf="@+id/view52"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view59" />

    <View
        android:id="@+id/view58"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:gravity="start"
        android:justificationMode="inter_word"
        android:text="@string/memeber_1"
        android:textColor="@color/main_color"
        android:textSize="@dimen/textsize_18"
        android:textStyle="bold"
        android:paddingLeft="25dp"
        app:layout_constraintBottom_toTopOf="@+id/view59"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view58" />

    <View
        android:id="@+id/view59"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:justificationMode="inter_word"
        android:text="@string/memeber_2"
        android:textColor="@color/main_color"
        android:textSize="@dimen/textsize_18"
        android:textStyle="bold"
        android:paddingLeft="25dp"
        app:layout_constraintBottom_toTopOf="@+id/view61"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view52" />

    <View
        android:id="@+id/view61"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <View
        android:id="@+id/view52"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:justificationMode="inter_word"
        android:text="@string/memeber_3"
        android:textColor="@color/main_color"
        android:textSize="@dimen/textsize_18"
        android:textStyle="bold"
        android:paddingLeft="25dp"
        app:layout_constraintBottom_toTopOf="@+id/view62"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view61" />

    <View
        android:id="@+id/view62"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:justificationMode="inter_word"
        android:text="@string/memeber_4"
        android:textColor="@color/main_color"
        android:textSize="@dimen/textsize_18"
        android:textStyle="bold"
        android:paddingLeft="25dp"
        app:layout_constraintBottom_toTopOf="@+id/view63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view62" />

    <View
        android:id="@+id/view63"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:justificationMode="inter_word"
        android:text="@string/memeber_5"
        android:textColor="@color/main_color"
        android:textSize="@dimen/textsize_18"
        android:textStyle="bold"
        android:paddingLeft="25dp"
        app:layout_constraintBottom_toTopOf="@+id/view53"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view63" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:justificationMode="inter_word"
        android:text="@string/memeber_6"
        android:textColor="@color/main_color"
        android:textSize="@dimen/textsize_18"
        android:textStyle="bold"
        android:paddingLeft="25dp"
        app:layout_constraintBottom_toTopOf="@+id/view65"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view53" />

    <View
        android:id="@+id/view57"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/view65"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <View
        android:id="@+id/view53"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintBottom_toTopOf="@+id/textView19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />


</androidx.constraintlayout.widget.ConstraintLayout>