<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyEncounterActivity">


  <androidx.appcompat.widget.Toolbar
      android:id="@+id/encounter_toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/encounter_title"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize_36"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/btn_des_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back"
        android:gravity="start"
        android:onClick="HomeIntent"
        android:background="@color/main_color"/>
  </androidx.appcompat.widget.Toolbar>

  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="390dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:background="@drawable/search_textfield"
      android:gravity="center"
      android:orientation="horizontal"
      android:padding="10dp"
      app:layout_constraintBottom_toTopOf="@+id/textView3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.454"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/encounter_toolbar">

    <ImageButton
        android:layout_width="@dimen/width_40"
        android:layout_height="@dimen/height_40"
        android:layout_gravity="left"
        android:background="@color/white"
        app:srcCompat="@drawable/search_green" />

    <EditText
        android:id="@+id/txt_search_field"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:layout_marginLeft="5dp"
        android:hint="@string/search_animal"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize_18" />
  </LinearLayout>

  <TextView
      android:id="@+id/textView3"
      android:layout_width="390dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:gravity="start"
      android:text="@string/animal_encounter"
      android:textColor="@color/main_color"
      android:textSize="@dimen/textsize_30"
      android:textStyle="bold"
      app:layout_constraintBottom_toTopOf="@+id/view6"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/view5"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

  <View
      android:id="@+id/view5"
      android:layout_width="20dp"
      android:layout_height="40dp"
      android:layout_marginTop="20dp"
      app:layout_constraintBottom_toTopOf="@+id/view6"
      app:layout_constraintEnd_toStartOf="@+id/textView3"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

  <View
      android:id="@+id/view6"
      android:layout_width="match_parent"
      android:layout_height="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/encounter_list"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:paddingLeft="20dp"
      app:layout_constraintBottom_toTopOf="@+id/id_Encounter_Guideline"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/view6"
      app:layout_constraintVertical_bias="0.0" />

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/id_Encounter_Guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.95" />



</androidx.constraintlayout.widget.ConstraintLayout>